--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -197,7 +197,7 @@ tinymce.init({
       document.getElementById('doubtAnswer_content').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 </script>
@@ -429,3 +429,20 @@ function addVideo() {
   this.tinyMCE.editors[0].execCommand('mceInsertContent', false, '<a href="https://www.neetprep.com/video-class/' + video_id + '">' + video_name + '</a>');
 }
 </script>
+<style>
+.float-button{
+	position:fixed;
+	width: 280px;
+	height:45px;
+	top:150px;
+	right:40px;
+	background-color: red;
+	color:#FFF;
+	box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  cursor: pointer;
+}
+</style>
+<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+  Hide MathType Trial Info* <br>*Click after opening MathType Editor
+</div>
