--- a/app/views/admin/course_details/_tinymce.html.erb
+++ b/app/views/admin/course_details/_tinymce.html.erb
@@ -24,7 +24,7 @@ tinymce.init({
       document.getElementById('course_detail_description').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 </script>
@@ -50,7 +50,7 @@ tinymce.init({
       document.getElementById('course_detail_description').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 
