--- a/app/views/admin/ncert_sentences/_tinymce.html.erb
+++ b/app/views/admin/ncert_sentences/_tinymce.html.erb
@@ -47,7 +47,24 @@ tinymce.init({
       document.getElementById('ncert_sentence').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 </script>
+<style>
+.float-button{
+	position:fixed;
+	width: 280px;
+	height:45px;
+	top:150px;
+	right:40px;
+	background-color: red;
+	color:#FFF;
+	box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  cursor: pointer;
+}
+</style>
+<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+  Hide MathType Trial Info* <br>*Click after opening MathType Editor
+</div>
