--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -76,7 +76,7 @@ tinymce.init({
     editor.on('blur', function (e) {
       document.getElementById('note_content').value = css + editor.getContent();
     });
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 
@@ -119,3 +119,20 @@ $('#update_button').on('click', function(e){
   });
 });
 </script>
+<style>
+.float-button{
+	position:fixed;
+	width: 280px;
+	height:45px;
+	top:150px;
+	right:40px;
+	background-color: red;
+	color:#FFF;
+	box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  cursor: pointer;
+}
+</style>
+<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+  Hide MathType Trial Info* <br>*Click after opening MathType Editor
+</div>
