fix time take duration for test

--- a/app/views/admin/tests/leader_board.html.slim
+++ b/app/views/admin/tests/leader_board.html.slim
@@ -23,7 +23,7 @@
           td = attempt.user.email || attempt.user.user_profile.email
           td = attempt.user.phone || attempt.user.user_profile.phone
           td = attempt&.finishedAt&.strftime("%d-%m-%Y %H:%M")
-          td = raw(((attempt.updatedAt - attempt.createdAt) / 60).round.to_s + " minutes") if attempt.createdAt.present? and attempt.updatedAt.present?
+          td = raw(((attempt.finishedAt - attempt.createdAt) / 60).round.to_s + " minutes") if attempt.createdAt.present? and attempt.finishedAt.present?
           td = attempt.result["totalMarks"]
 
   div style="margin-top: 32px;"
