--- a/app/views/application/_mathjax.html.erb
+++ b/app/views/application/_mathjax.html.erb
@@ -6,7 +6,7 @@ MathJax.Hub.Config({
   }
 });
 </script>
-<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script type="text/javascript" async src="https://dsbihjlymzdyy.cloudfront.net/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
 <script>
   window.onload = function() {
     MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
