--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -32,7 +32,7 @@ tinymce.init({
   plugins: "link image code paste media textcolor colorpicker template questionIframe youtubeIframeAsync ncertBlueBox",
   external_plugins: { tiny_mce_wiris: 'https://www.neetprep.com/@wiris/mathtype-tinymce4/plugin.min.js' },
   language: 'en',
-  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,template,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,questionIframe,|,youtubeIframeAsync,|,ncertBlueBox',
+  toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,template,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,fullscreen,media,|,questionIframe,|,youtubeIframeAsync,|,ncertBlueBox',
   paste_data_images: true,
   extended_valid_elements : 'a[id|class|style|width|height|onclick|href|target],div[id|class|style|width|height|onclick|data-url],script[src|async|defer|type|charset],audio[controlslist|controls|preload]',
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
