changes for suggested video sentences

--- a/app/views/admin/video_sentences/_keywords.html.erb
+++ b/app/views/admin/video_sentences/_keywords.html.erb
@@ -36,9 +36,13 @@
   }
 </style>
 
+<%= render partial: 'mathjax' %>
 <div class="essential-keywords">
   <p> Important keywords from <a target="_blank" href="<%= admin_question_path(question.id) %>">
-    <span class="tag green"> Question #<%= question.id %> </span></a></p>
+    <span class="tag green"> Question #<%= question.id %> </span></a>
+    <br />
+    <span id="question-text"><%=raw(question.question)%></span>
+  </p>
   <div class="keywords-list">
     <% question.essential_keywords.each do |word|%>
       <% unless exclude_keywords.include? word%>
