--- a/app/views/doubt_answers/_canvas.html.erb
+++ b/app/views/doubt_answers/_canvas.html.erb
@@ -73,8 +73,8 @@
 
       <div class="toolsButtons">
         <h3>Tools</h3>
-        <button id="eraser" class="btn btn-default">Eraser</button>
-        <button id="clear" class="btn btn-danger">Clear</button>
+        <button id="eraser">Eraser</button>
+        <button id="clear">Clear</button>
       </div>
 
       <div class="buttonSize">
@@ -84,8 +84,13 @@
 
       <div class="extra">
         <h3>Save</h3>
-        <button id="save" class="btn btn-default" onclick="saveCanvas()">Save</button>
-        <a id="saveToImage" class="btn btn-warning">Download</a>
+        <button id="save" onclick="saveCanvas()">Save</button>
+        <a id="saveToImage">Download</a>
+      </div>
+
+      <div class="extra">
+        <h3></h3>
+        <p id='eraser_info' style="display: none;"> Eraser is <strong>enabled </strong></p>
       </div>
     </div>
     <canvas id="canvas1" class="canvas" width="1500" height="800" style="border:2px solid;"></canvas>
@@ -97,6 +102,15 @@
 <script>
   init();
   setupEvents();
+
+  document.getElementById('eraser').addEventListener('click', () => $('#eraser_info').show());
+  document.getElementById('colorpicker').addEventListener('click', () => {
+    // even if user just clicks on colorpicker we should disable eraser & reset canvas properties
+    $('#eraser_info').hide();
+    currentSize = parseInt($('#controlSize').val());
+    currentColor = $('#colorpicker').val();
+  })
+
 
   function saveCanvas(){
     tinyMCE.editors[0].execCommand('mceInsertContent', false, `<img src=${canvas1.toDataURL()}>`);
