if there is 1 unsloved doubt we redirect to that doubt after asking the admin do you want to go there

--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -263,7 +263,18 @@ function assignToMe() {
       "doubtId": doubtId
     }
   }).done (function (data) {
-    location.reload();
+    if(data.doubt_id==''){
+      location.reload();
+    }
+    else{
+      let url =  "https://admin1.neetprep.com/doubt_answers/answer?doubt_id=" + data.doubt_id
+      let a = document.createElement('a');
+      a.href = url;
+      if(window.confirm('You already have 1 doubt unsolved. Go to doubt.')){
+        a.click();
+      }
+    }
+
   }).fail(function (data) {
     console.log(data);
     alert("Failed to assign");
