--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -267,7 +267,7 @@ function assignToMe() {
       location.reload();
     }
     else{
-      let url =  "https://admin1.neetprep.com/doubt_answers/answer?doubt_id=" + data.doubt_id
+      let url =  "/doubt_answers/answer?doubt_id=" + data.doubt_id
       let a = document.createElement('a');
       a.href = url;
       if(window.confirm('You already have 1 doubt unsolved. Go to doubt.')){
