--- a/app/views/admin/flash_cards/_tinymce.html.erb
+++ b/app/views/admin/flash_cards/_tinymce.html.erb
@@ -67,6 +67,6 @@ tinymce.init({
   cursor: pointer;
 }
 </style>
-<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+<!--<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
   Hide MathType Trial Info* <br>*Click after opening MathType Editor
-</div>
+</div>-->
