--- a/app/views/admin/ncert_sentences/_tinymce.html.erb
+++ b/app/views/admin/ncert_sentences/_tinymce.html.erb
@@ -65,6 +65,6 @@ tinymce.init({
   cursor: pointer;
 }
 </style>
-<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+<!--<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
   Hide MathType Trial Info* <br>*Click after opening MathType Editor
-</div>
+</div>-->
