--- a/app/views/doubt_answers/answer.html.erb
+++ b/app/views/doubt_answers/answer.html.erb
@@ -453,6 +453,6 @@ function addVideo() {
   cursor: pointer;
 }
 </style>
-<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+<!--<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
   Hide MathType Trial Info* <br>*Click after opening MathType Editor
-</div>
+</div>-->
