--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -133,6 +133,6 @@ $('#update_button').on('click', function(e){
   cursor: pointer;
 }
 </style>
-<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+<!--<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
   Hide MathType Trial Info* <br>*Click after opening MathType Editor
-</div>
+</div>-->
