--- a/app/views/tests/live_session_questions.html.erb
+++ b/app/views/tests/live_session_questions.html.erb
@@ -1,26 +1,26 @@
 <!doctype html>
 <html lang="en">
-<style>
+  <style>
 .container{
-	display: flex;
+  display: flex;
 }
 .col{
-	flex: 1;
+  flex: 1;
   font-size: <%= params[:font_size].present? ? params[:font_size] : 24%>px;
   padding-top: 30px;
   padding-left: 30px;
   padding-right: 30px;
 }
 .question {
-	text-align: left;
+  text-align: left;
   font-weight: <%=params[:font_weight].present? ? params[:font_weight] : "bold;"%>; 
   <%= "color: " + params[:color] + ";" if params[:color].present? %>
 }
 .logo {
   text-align: right;
 }
-</style>
-<head>
+  </style>
+  <head>
     <meta charset="utf-8">
 
     <title></title>
@@ -29,55 +29,55 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/theme/simple.css" id="theme">
-</head>
+  </head>
 
 
-<body>
-</script>
+  <body>
+    </script>
     <div class="reveal">
 
-        <div class="slides">
+      <div class="slides">
 
-					<% @test_questions.each_with_index do |question, index| %>
-            <section data-background-color="<%= params[:background].present? ? params[:background] : 'rgb(0, 0, 0)'%>">
-							<div class="container">
-								<div class="col question">
-									<%= raw(question.question) %>
-								</div>
-								<div class="col logo">
-                  <image src="https://signup.neetprep.com/assets/img/logo.png" />
-								</div>
+        <% @test_questions.each_with_index do |question, index| %>
+          <section data-background-color="<%= params[:background].present? ? params[:background] : 'rgb(0, 0, 0)'%>">
+            <div class="container">
+              <div class="col question">
+                <%= raw(question.question) %>
               </div>
-						</section>
-					<% end %>
+              <div class="col logo">
+                <image width="270" src="<%=params[:logo] == 'black' ? 'https://dsbihjlymzdyy.cloudfront.net/logo/logo_black.png' : 'https://dsbihjlymzdyy.cloudfront.net/logo/logo_white.png'%>" />
+              </div>
+            </div>
+          </section>
+        <% end %>
 
-        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/reveal.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.0/plugin/math/math.js"></script>
-		<script type="text/x-mathjax-config">
-			MathJax.Hub.Config({
-				CommonHTML: {
-				mtextFontInherit: true
-			}
-		});
-		</script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        CommonHTML: {
+        mtextFontInherit: true
+      }
+    });
+    </script>
     <script>
-        Reveal.initialize({
-            transition: 'linear',
-            disableLayout: true,
-            minScale: 1,
-            maxScale: 1,
-            math: {
-							  mathjax: 'https://cdn.jsdelivr.net/gh/mathjax/mathjax@2.7.5/MathJax.js',
-							  config: 'TeX-MML-AM_HTMLorMML',
-            },
+      Reveal.initialize({
+        transition: 'linear',
+        disableLayout: true,
+        minScale: 1,
+        maxScale: 1,
+        math: {
+          mathjax: 'https://cdn.jsdelivr.net/gh/mathjax/mathjax@2.7.5/MathJax.js',
+          config: 'TeX-MML-AM_HTMLorMML',
+        },
 
-            plugins: [RevealMath]
-        });
+        plugins: [RevealMath]
+      });
     </script>
 
-</body>
+  </body>
 
 </html>
